Added delete metrics command
